--- a/.travis.yml
+++ b/.travis.yml
@@ -27,19 +27,21 @@ install:
   - echo "install"
   - sleep 1s
 
-before_deploy:
-  - echo "before_deploy"
-  - sleep 1s
 
 # Heroku, Amazon 또는 다른 지원되는 플랫폼에 코드를 배포함으로써 정의됩니다
 # https://docs.travis-ci.com/user/job-lifecycle/#deploying-your-code
-deploy:
-  - echo "deploy"
-  - sleep 1s
 
-after_deploy:
-  - echo "after_deploy"
-  - sleep 1s
+# before_deploy:
+#   - echo "before_deploy"
+#   - sleep 1s
+
+# deploy:
+#   - echo "deploy"
+#   - sleep 1s
+
+# after_deploy:
+#   - echo "after_deploy"
+#   - sleep 1s
 
 
 after_script:
