--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,10 @@
-dist: xenial
-language: php
-php:
-  - '5.6'
-
-matrix:
+jobs:
   include:
-    - language: python
-      python: 3.6
-      script:
-      - python -c "print('Hi from Python!')"
-
-    - language: node_js
-      node_js: 9
-      script:
-      - node -e "console.log('Hi from NodeJS!')"
-
-    - language: java
-      jdk: openjdk8
-      script:
-      - javac -help
+    - stage: "Tests"                # naming the Tests stage
+      name: "Unit Tests"            # names the first Tests stage job
+      script: echo "Running unit tests"
+    - script: ./integration-tests
+      name: "Integration Tests"     # names the second Tests stage job
+    - stage: deploy
+      name: "Deploy to GCP"
+      script: echo "Deploy to GCP"
