--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jobs:
     - stage: "Tests"                # naming the Tests stage
       name: "Unit Tests"            # names the first Tests stage job
       script: echo "Running unit tests"
-    - script: ./integration-tests
+    - script: echo "Running integration tests"
       name: "Integration Tests"     # names the second Tests stage job
     - stage: deploy
       name: "Deploy to GCP"
