--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,8 @@
-rvm:
-  - 2.3
-
-env:
-  - FOO=foo
-  - FOO=bar
-
-script: echo $FOO
-
-jobs:
-  include:
-    - stage: deploy
-      script: echo Deploy
-      # Keep in mind to overwrite these here
-      rvm: 2.3
-      env: FOO=foo
+osx_image: xcode11
 
 addons:
   homebrew:
     brewfile: ./Brewfile.travis
     update: true
+
+script: echo FOO
