--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
-osx_image: xcode11
-
+osx_image: xcode10
 addons:
   homebrew:
-    brewfile: ./Brewfile.travis
-    update: true
-
-script: echo FOO
+    taps: homebrew/cask-versions
+    casks: java8
