--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 osx_image: xcode10
 addons:
   homebrew:
-    taps: homebrew/cask-versions
-    casks: java8
+    packages:
+    - beanstalk
+    update: true
